tests/paczka1/fuzzy1/82047706.err
Error in line 7: A916 S698 52,4
Error in line 4: TSQEMZ4ppU A567 31,6
Error in line 20: LlFL A567 22,4
Error in line 19: A916 A567 89,6
Error in line 29: TSQEMZ4ppU A916 39,5
Error in line 30: TSQEMZ4ppU S698 93,2
Error in line 35: Mge0jUPp99 A916 97,1
